deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-app
  name: nodejs-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: status
          image: 499969923602.dkr.ecr.ap-southeast-1.amazonaws.com/issdsai:latest
          ports:
            - containerPort: 8080
          securityContext:
              privileged: true
