flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-container
        image: 499969923602.dkr.ecr.ap-southeast-1.amazonaws.com/issdsai-flask:latest
        ports:
        - containerPort: 5000
