flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer
  ports:
    #- name: http
    #  port: 80
    #  targetPort: 5000
    - name: https
      port: 443
      targetPort: 5000
  selector:
    app: flask

#apiVersion: v1
#kind: Service
#metadata:
#  name: flask-service
#spec:
#  selector:
#    app: flask
#  ports:
#    - protocol: TCP
#      port: 443
#      targetPort: 5000
