service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
spec:
  type: LoadBalancer
  ports:
    #- name: http
    #  port: 80
    #  targetPort: 8080
    - name: https
      port: 443
      targetPort: 8080
  selector:
    app: nodejs-app


#apiVersion: v1
#kind: Service
#metadata:
#  name: nodejs-app
#spec:
#  type: LoadBalancer
#  ports:
#    - port: 80
#      targetPort: 8080
#  selector:
#    app: nodejs-app
